--- a/k8s/cheatsheet/udemy-ckaWPE/100-101-104_envVars.md
+++ b/k8s/cheatsheet/udemy-ckaWPE/100-101-104_envVars.md
@@ -4,3 +4,118 @@ Environment Variables, Config Maps and Secretes
 
 ## Environment Variables
 - Defined as key:value pairs under `spec.containers` in a list data format
+
+
+## ConfigMaps
+- Many definition files --> difficult to manage *env vars*
+- Central management
+- *key*:*value*
+- Two phases for using them:
+   1. *Creation*
+   2. *Injection*
+- How to *create* a configMap
+   1. Imperative
+      - This is also done in two different ways:
+         - Injecting in command
+            - `k create configmap <name> --from-literal=<key1>=<value1>`
+            - For multiple pairs, just keep using the switch `--from-literal` for each pair of values
+               - `k create configmap <name> --from-literal <key1>=<value1> --from-literal <key2>:<value2>`
+         - Importing from a file
+            - Using `--from-flie=<pathToT`
+   2. Declarative
+      - Creating a *Definition file*
+      ```
+      apiVersion: v1
+      kind: ConfigMpas
+      metadata:
+         name: <name>
+      data:
+         <key1>:<value1>
+         <key2>:<value2>
+         ...
+      ```
+      - run the `k create -f <fileName>` to create it
+
+### Using *configMaps* in pod
+- under `spec.containers.envFrom`
+   ```
+   envFrom:             # It is a list, each item in it corresponds to a configMap item
+      - configMapRef:
+         name: <desiredConfigMapName>
+   ```
+- To import one var, under `.spec.containers.env`
+```
+env:
+   - name: "envName"
+     valueFrom:
+      configMapKeyRef:
+         name: <configMapName>
+         key: <desiredKeyName>
+```
+
+## Secrets
+- Sensitive information like passwords and keys
+- As with configmaps, two phases for using them
+   1. *creation*
+   2. *injection*
+- Two ways of creating a secret
+   1. *Imperative*
+      - `k create secret <secType> <name> ...`
+         - `secType` can be one of the following (As in my setup *AWS*)
+            - `docker-registry`
+            - `generic`
+            - `tls`
+         - for example:
+         ```
+         k create secret generic db-secret --from-literal=<secKey>=<secVal>
+         ```
+            - The option `--from-literal` can be passed multiple times for multiple pairs of secrets
+      - Same as *configMaps*, `--from-file` can also be used to read a whole file as secret pairs
+   2. *Declarative*
+      - Using definition file
+      ```
+      apiVersion: v1
+      kind: Secret
+      metadata:
+         name: <secName>
+      data:
+         <key1>: <val1>
+         <key2>: <val2>
+         ...
+      ```
+      - While creating secrets in *declarative* way, the value of the secrets should be provided in an encoded form for security
+      - How to convert data from **Plain** text to **Encoded** form?
+         - On a linux machine `echo "<secret> | base64"`
+### Useful commands:
+- To see the values of the secrets, you can use `k get secret <secName> -o yaml`
+- To decode the endcoded value of a secret, on Linux: `echo <secVal> | base64 --decode`
+- How to use secrets in *pods*
+   - under `spec.containers`
+   - Injecting secret as `env var`
+   ```
+   envFrom:
+      - secretRef:
+         name: <secName>
+   ```
+   - Injecting *single* `env`
+      - under `spec.containers`
+   ```
+   env:
+      - name: <secretNameWithinThePod>
+        valueFrom:
+         secretKeyRef: # configMapKeyRef in configMaps
+            name: <secretName>
+            key: <secKey>
+   ```
+   - Injecting the whole secrets as *files* in *volumes*
+   ```
+   volumes:
+      - name: <volName>
+        secret:
+         secretName: <secName>
+   ```
+      - In this case each attribute inside the volume is created as a file and it's value is the file's content
+
+### Secrets takeaways
+   - Not encrypted, only encoded
+   - No encryption in `etcd`
